random_recipe_generator: image "overstretch" when having a lot of text content fixed

--- a/random_recipe_generator/src/style.css
+++ b/random_recipe_generator/src/style.css
@@ -40,6 +40,7 @@ body {
 
         #recipe-image {
             max-width : 40%;
+            max-height: 50vh;
         }
     }
 
